Discontinue validating metadata using metadatatool
Includes removal of metadatatool itself, and the JKS version of the UK
federation signing certificate it used.

Resolves ukf/ukf-meta #4.